// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migrate-to-schema batch operation > README example: model with mixin, belongsTo, hasMany, and extension methods > readme_example 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import Timestampable from '../../mixins/timestampable';
import type { User } from './user.type.ts';

// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User, Timestampable {}
export class UserExtension {
  get displayName() {
      return this.name || this.email;
    }

  async updateProfile(data) {
      this.setProperties(data);
      return this.save();
    }
}

const Registration = {
  kind: 'object',
  name: 'user',
  features: UserExtension,
};
export default Registration;",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'hasMany',
      'name': 'projects',
      'type': 'project',
      'options': {
        'async': true
      }
    }
  ],
  'traits': [
    'timestampable'
  ],
  'objectExtensions': [
    'TimestampableTraitExtension'
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { Company } from 'test-app/data/resources/company.type';
import type { Project } from 'test-app/data/resources/project.type';
import type { TimestampableTrait } from 'test-app/data/traits/timestampable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource extends TimestampableTrait {
  readonly [Type]: 'user';
  id: string | null;
  name: string;
  email: string;
  company: Company;
  projects: Project[];
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/timestampable.ext.ts": "




import type { TimestampableTrait } from 'test-app/data/traits/timestampable.type';

export interface TimestampableTraitExtension extends TimestampableTrait {}

// TODO: migrate this extension to a class so that TypeScript declaration merging works.
// Object extensions do not support interface merging.
export const TimestampableTraitExtension = {
  timeSince() {
    return Date.now() - this.updatedAt;
  }
};

const Registration = {
  kind: 'object',
  name: 'timestampable',
  features: TimestampableTraitExtension,
};
export default Registration;",
  "traits/timestampable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const TimestampableTraitSchema = {
  'name': 'timestampable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    },
    {
      'name': 'updatedAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ],
  'traits': [
    'deleteable'
  ]
} satisfies LegacyTrait;

export default TimestampableTraitSchema;
",
  "traits/timestampable.type.ts": "
import type { DeleteableTrait } from 'test-app/data/traits/deleteable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface TimestampableTrait extends DeleteableTrait {
  createdAt?: Date | null;
  updatedAt?: Date | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > README example: model with mixin, belongsTo, hasMany, and extension methods > readme_example_structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
  "traits/timestampable.ext.ts",
  "traits/timestampable.schema.ts",
  "traits/timestampable.type.ts",
]
`;

exports[`migrate-to-schema batch operation > colocates type files with their corresponding schemas and traits > nested directory files 1`] = `
{
  "resources/": "__dir__",
  "resources/admin-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { ConnectedTrait } from 'test-app/data/traits/connected.type';

/**
 * This type represents the full set schema derived fields of
 * the 'admin-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AdminModel} for fields + legacy mode features
 */
export interface AdminModelResource extends ConnectedTrait {
  readonly [Type]: 'admin-model';
  id: string | null;
  adminName: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'admin-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AdminModelResource} for just the fields
 */
export interface AdminModel extends WithLegacy<AdminModelResource> {}
",
  "resources/admin/": "__dir__",
  "resources/admin/admin-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const AdminModelSchema = withDefaults({
  'type': 'admin-model',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'adminName',
      'type': 'string'
    }
  ],
  'traits': [
    'connected'
  ]
});

export default AdminModelSchema;
",
  "resources/admin/nested-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const NestedModelSchema = withDefaults({
  'type': 'nested-model',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
});

export default NestedModelSchema;
",
  "resources/nested-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'nested-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link NestedModel} for fields + legacy mode features
 */
export interface NestedModelResource {
  readonly [Type]: 'nested-model';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'nested-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link NestedModelResource} for just the fields
 */
export interface NestedModel extends WithLegacy<NestedModelResource> {}
",
  "traits/": "__dir__",
  "traits/admin/": "__dir__",
  "traits/admin/connected.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const ConnectedTraitSchema = {
  'name': 'connected',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'commonField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default ConnectedTraitSchema;
",
  "traits/connected.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'connected' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface ConnectedTrait {
  commonField?: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > colocates type files with their corresponding schemas and traits > nested directory structure 1`] = `
[
  "resources/",
  "resources/admin/",
  "resources/admin/admin-model.schema.ts",
  "resources/admin/nested-model.schema.ts",
  "resources/admin-model.type.ts",
  "resources/nested-model.type.ts",
  "traits/",
  "traits/admin/",
  "traits/admin/connected.schema.ts",
  "traits/connected.type.ts",
]
`;

exports[`migrate-to-schema batch operation > combineSchemasAndTypes=true > generates combined artifacts with mixins, belongsTo, hasMany, and extensions > combined with mixins file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "traits/",
  "traits/timestampable.ext.ts",
  "traits/timestampable.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > combineSchemasAndTypes=true > generates combined artifacts with mixins, belongsTo, hasMany, and extensions > combined with mixins files 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import Timestampable from '../../mixins/timestampable';
import type { User } from './user.schema.ts';

// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User, Timestampable {}
export class UserExtension {
  get displayName() {
      return this.name || this.email;
    }

  async updateProfile(data) {
      this.setProperties(data);
      return this.save();
    }
}

const Registration = {
  kind: 'object',
  name: 'user',
  features: UserExtension,
};
export default Registration;",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { Company } from 'test-app/data/resources/company.schema';
import type { Project } from 'test-app/data/resources/project.schema';
import type { TimestampableTrait } from 'test-app/data/traits/timestampable.schema';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'hasMany',
      'name': 'projects',
      'type': 'project',
      'options': {
        'async': true
      }
    }
  ],
  'traits': [
    'timestampable'
  ],
  'objectExtensions': [
    'TimestampableTraitExtension'
  ]
});

export default UserSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource extends TimestampableTrait {
  readonly [Type]: 'user';
  id: string | null;
  name: string;
  email: string;
  company: Company;
  projects: Project[];
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/timestampable.ext.ts": "




import type { TimestampableTrait } from 'test-app/data/traits/timestampable.schema';

export interface TimestampableTraitExtension extends TimestampableTrait {}

// TODO: migrate this extension to a class so that TypeScript declaration merging works.
// Object extensions do not support interface merging.
export const TimestampableTraitExtension = {
  timeSince() {
    return Date.now() - this.updatedAt;
  }
};

const Registration = {
  kind: 'object',
  name: 'timestampable',
  features: TimestampableTraitExtension,
};
export default Registration;",
  "traits/timestampable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

import type { DeleteableTrait } from 'test-app/data/traits/deleteable.schema';

const TimestampableTraitSchema = {
  'name': 'timestampable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    },
    {
      'name': 'updatedAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ],
  'traits': [
    'deleteable'
  ]
} satisfies LegacyTrait;

export default TimestampableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface TimestampableTrait extends DeleteableTrait {
  createdAt?: Date | null;
  updatedAt?: Date | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > creates output directories if they do not exist > generated file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > detects mixins referenced via type-only imports > type-only import file structure 1`] = `
[
  "resources/",
  "resources/audit-log.schema.ts",
  "resources/audit-log.type.ts",
  "resources/audited-record.schema.ts",
  "resources/audited-record.type.ts",
  "traits/",
  "traits/auditable.schema.ts",
  "traits/auditable.type.ts",
]
`;

exports[`migrate-to-schema batch operation > detects mixins referenced via type-only imports > type-only import files 1`] = `
{
  "resources/": "__dir__",
  "resources/audit-log.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const AuditLogSchema = withDefaults({
  'type': 'audit-log',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'action',
      'type': 'string'
    }
  ],
  'traits': [
    'auditable'
  ]
});

export default AuditLogSchema;
",
  "resources/audit-log.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { AuditableTrait } from 'test-app/data/traits/auditable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'audit-log' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AuditLog} for fields + legacy mode features
 */
export interface AuditLogResource extends AuditableTrait {
  readonly [Type]: 'audit-log';
  id: string | null;
  action: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'audit-log' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditLogResource} for just the fields
 */
export interface AuditLog extends WithLegacy<AuditLogResource> {}
",
  "resources/audited-record.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const AuditedRecordSchema = withDefaults({
  'type': 'audited-record',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    }
  ]
});

export default AuditedRecordSchema;
",
  "resources/audited-record.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';

/**
 * This type represents the full set schema derived fields of
 * the 'audited-record' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AuditedRecord} for fields + legacy mode features
 */
export interface AuditedRecordResource {
  readonly [Type]: 'audited-record';
  id: string | null;
  name: string | null;
  user: User | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'audited-record' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditedRecordResource} for just the fields
 */
export interface AuditedRecord extends WithLegacy<AuditedRecordResource> {}
",
  "traits/": "__dir__",
  "traits/auditable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const AuditableTraitSchema = {
  'name': 'auditable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'auditStatus',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'auditDate',
      'kind': 'attribute',
      'type': 'date'
    }
  ]
} satisfies LegacyTrait;

export default AuditableTraitSchema;
",
  "traits/auditable.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'auditable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface AuditableTrait {
  auditStatus?: string | null;
  auditDate?: Date | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > does not misclassify model extending base model via relative import as fragment > generated file structure 1`] = `
[
  "resources/",
  "resources/action-plan.ext.js",
  "resources/action-plan.schema.ts",
  "resources/action-plan.type.ts",
  "traits/",
  "traits/base-model.schema.ts",
  "traits/base-model.type.ts",
]
`;

exports[`migrate-to-schema batch operation > does not misclassify model extending base model via relative import as fragment > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/action-plan.ext.js": "
import BaseModel from 'test-app/models/base-model';

export class ActionPlanExtension {
  get displayName() {
      return this.name;
    }
}

const Registration = {
  kind: 'object',
  name: 'action-plan',
  features: ActionPlanExtension,
};
export default Registration;",
  "resources/action-plan.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const ActionPlanSchema = withDefaults({
  'type': 'action-plan',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
});

export default ActionPlanSchema;
",
  "resources/action-plan.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'action-plan' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link ActionPlan} for fields + legacy mode features
 */
export interface ActionPlanResource {
  readonly [Type]: 'action-plan';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'action-plan' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link ActionPlanResource} for just the fields
 */
export interface ActionPlan extends WithLegacy<ActionPlanResource> {}
",
  "traits/": "__dir__",
  "traits/base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': 'base-model',
  'mode': 'legacy',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'description',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "traits/base-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the 'base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
  id: string | null;
  description: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > does not put type files in the default fallback directory > app directory structure 1`] = `
[
  "data/",
  "data/resources/",
  "data/resources/user.schema.ts",
  "data/resources/user.type.ts",
  "data/traits/",
  "models/",
  "models/user.ts",
]
`;

exports[`migrate-to-schema batch operation > dynamically detects traits vs resources for import paths > traits vs resources file structure 1`] = `
[
  "resources/",
  "resources/test-model.schema.ts",
  "resources/test-model.type.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
  "traits/workstreamable.schema.ts",
  "traits/workstreamable.type.ts",
]
`;

exports[`migrate-to-schema batch operation > dynamically detects traits vs resources for import paths > traits vs resources files 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TestModelSchema = withDefaults({
  'type': 'test-model',
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ]
});

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.type';
import type { WorkstreamableTrait } from 'test-app/data/traits/workstreamable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for just the fields
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default WorkstreamableTraitSchema;
",
  "traits/workstreamable.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > ensures resources and traits include .schema with matching suffixes > schema naming file structure 1`] = `
[
  "resources/",
  "resources/js-test-model.ext.js",
  "resources/js-test-model.schema.ts",
  "resources/js-test-model.type.ts",
  "resources/ts-test-model.schema.ts",
  "resources/ts-test-model.type.ts",
  "traits/",
  "traits/test-mixin.ext.ts",
  "traits/test-mixin.schema.ts",
  "traits/test-mixin.type.ts",
]
`;

exports[`migrate-to-schema batch operation > ensures schema files match source extension and type files are always .ts > mixed extensions file structure 1`] = `
[
  "resources/",
  "resources/js-model.schema.ts",
  "resources/js-model.type.ts",
  "resources/ts-model.schema.ts",
  "resources/ts-model.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > ensures type files are always .ts regardless of source file extension > type files extension structure 1`] = `
[
  "resources/",
  "resources/js-model.schema.ts",
  "resources/js-model.type.ts",
  "resources/ts-model.schema.ts",
  "resources/ts-model.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > extracts intermediate model trait when base class uses additionalModelSources > intermediate model from additionalModelSources file structure 1`] = `
[
  "resources/",
  "resources/approval-request.schema.ts",
  "resources/approval-request.type.ts",
  "traits/",
  "traits/-base-model.schema.ts",
  "traits/-base-model.type.ts",
  "traits/base-model.ext.js",
  "traits/base-model.schema.ts",
  "traits/base-model.type.ts",
]
`;

exports[`migrate-to-schema batch operation > extracts intermediate model trait when base class uses additionalModelSources > intermediate model from additionalModelSources files 1`] = `
{
  "resources/": "__dir__",
  "resources/approval-request.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const ApprovalRequestSchema = withDefaults({
  'type': 'approval-request',
  'fields': [],
  'traits': [
    'base-model',
    '-base-model'
  ],
  'objectExtensions': [
    'BaseModelTraitExtension'
  ]
});

export default ApprovalRequestSchema;
",
  "resources/approval-request.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { BaseModelTrait } from 'test-app/data/traits/base-model.type';
import type { BaseModelTrait } from 'test-app/data/traits/-base-model.type';

/**
 * This type represents the full set schema derived fields of
 * the 'approval-request' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link ApprovalRequest} for fields + legacy mode features
 */
export interface ApprovalRequestResource extends BaseModelTrait, BaseModelTrait {
  readonly [Type]: 'approval-request';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'approval-request' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link ApprovalRequestResource} for just the fields
 */
export interface ApprovalRequest extends WithLegacy<ApprovalRequestResource> {}
",
  "traits/": "__dir__",
  "traits/-base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': '-base-model',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "traits/-base-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the '-base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
  id: string | null;
}
",
  "traits/base-model.ext.js": "


// TODO: migrate this extension to a class so that TypeScript declaration merging works.
// Object extensions do not support interface merging.
export const BaseModelTraitExtension = {
  baseModelMixinMethod() {}
};

const Registration = {
  kind: 'object',
  name: 'base-model',
  features: BaseModelTraitExtension,
};
export default Registration;",
  "traits/base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': 'base-model',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "traits/base-model.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
}
",
}
`;

exports[`migrate-to-schema batch operation > generates multiple artifacts when processing multiple files > generated file structure 1`] = `
[
  "resources/",
  "resources/company.ext.ts",
  "resources/company.schema.ts",
  "resources/company.type.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > generates multiple artifacts when processing multiple files > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/company.ext.ts": "
import type { Company } from './company.type.ts';


// @ts-ignore-error in reality fields are not merged, they are overridden
export interface CompanyExtension extends Company {}
export class CompanyExtension {
  get userCount() {
      return this.users.length;
    }
}

const Registration = {
  kind: 'object',
  name: 'company',
  features: CompanyExtension,
};
export default Registration;",
  "resources/company.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const CompanySchema = withDefaults({
  'type': 'company',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'hasMany',
      'name': 'users',
      'type': 'user',
      'options': {
        'async': false,
        'inverse': 'company'
      }
    }
  ]
});

export default CompanySchema;
",
  "resources/company.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { HasMany } from '@ember-data/model';
import type { User } from 'test-app/data/resources/user.type';

/**
 * This type represents the full set schema derived fields of
 * the 'company' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Company} for fields + legacy mode features
 */
export interface CompanyResource {
  readonly [Type]: 'company';
  id: string | null;
  name: string | null;
  users: HasMany<User>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'company' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CompanyResource} for just the fields
 */
export interface Company extends WithLegacy<CompanyResource> {}
",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    }
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
  email: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
}
`;

exports[`migrate-to-schema batch operation > generates schema and type artifacts for models > generated file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > generates schema and type artifacts for models > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import type { User } from './user.type.ts';


// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User {}
export class UserExtension {
  // Extension property
  get displayName() {
      return this.name || this.email;
    }
}

const Registration = {
  kind: 'object',
  name: 'user',
  features: UserExtension,
};
export default Registration;",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    }
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { Company } from 'test-app/data/resources/company.type';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
  email: string | null;
  company: Company | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
}
`;

exports[`migrate-to-schema batch operation > handles external mixin imports from additionalMixinSources > external mixins file structure 1`] = `
[
  "resources/",
  "resources/test-model.schema.ts",
  "resources/test-model.type.ts",
  "traits/",
  "traits/external-mixin.schema.ts",
  "traits/external-mixin.type.ts",
  "traits/local-mixin.schema.ts",
  "traits/local-mixin.type.ts",
]
`;

exports[`migrate-to-schema batch operation > handles external mixin imports from additionalMixinSources > external mixins files 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TestModelSchema = withDefaults({
  'type': 'test-model',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ],
  'traits': [
    'external',
    'local'
  ]
});

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { ExternalTrait } from 'test-app/data/traits/external.type';
import type { LocalTrait } from 'test-app/data/traits/local.type';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends ExternalTrait, LocalTrait {
  readonly [Type]: 'test-model';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for just the fields
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "traits/": "__dir__",
  "traits/external-mixin.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const ExternalMixinTraitSchema = {
  'name': 'external-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'externalField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default ExternalMixinTraitSchema;
",
  "traits/external-mixin.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'external-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface ExternalMixinTrait {
  externalField?: string | null;
}
",
  "traits/local-mixin.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const LocalMixinTraitSchema = {
  'name': 'local-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'localField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default LocalMixinTraitSchema;
",
  "traits/local-mixin.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'local-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface LocalMixinTrait {
  localField?: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > handles mixed js and ts files correctly with proper type file extensions > mixed js/ts file structure 1`] = `
[
  "resources/",
  "resources/js-model-with-mixin.ext.js",
  "resources/js-model-with-mixin.schema.ts",
  "resources/js-model-with-mixin.type.ts",
  "resources/ts-model-with-mixin.schema.ts",
  "resources/ts-model-with-mixin.type.ts",
  "traits/",
  "traits/js-mixin.schema.ts",
  "traits/js-mixin.type.ts",
  "traits/ts-mixin.ext.ts",
  "traits/ts-mixin.schema.ts",
  "traits/ts-mixin.type.ts",
]
`;

exports[`migrate-to-schema batch operation > handles mixed js and ts files correctly with proper type file extensions > mixed js/ts files 1`] = `
{
  "resources/": "__dir__",
  "resources/js-model-with-mixin.ext.js": "
import JsMixin from '../../mixins/js-mixin';

export class JsModelWithMixinExtension {
  get displayName() {
      return this.name + ' (JS)';
    }
}

const Registration = {
  kind: 'object',
  name: 'js-model-with-mixin',
  features: JsModelWithMixinExtension,
};
export default Registration;",
  "resources/js-model-with-mixin.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const JsModelWithMixinSchema = withDefaults({
  'type': 'js-model-with-mixin',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ],
  'traits': [
    'js'
  ]
});

export default JsModelWithMixinSchema;
",
  "resources/js-model-with-mixin.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { JsTrait } from 'test-app/data/traits/js.type';

/**
 * This type represents the full set schema derived fields of
 * the 'js-model-with-mixin' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link JsModelWithMixin} for fields + legacy mode features
 */
export interface JsModelWithMixinResource extends JsTrait {
  readonly [Type]: 'js-model-with-mixin';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'js-model-with-mixin' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link JsModelWithMixinResource} for just the fields
 */
export interface JsModelWithMixin extends WithLegacy<JsModelWithMixinResource> {}
",
  "resources/ts-model-with-mixin.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TsModelWithMixinSchema = withDefaults({
  'type': 'ts-model-with-mixin',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'title',
      'type': 'string'
    }
  ],
  'traits': [
    'ts'
  ],
  'objectExtensions': [
    'TsMixinTraitExtension'
  ]
});

export default TsModelWithMixinSchema;
",
  "resources/ts-model-with-mixin.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { TsTrait } from 'test-app/data/traits/ts.type';

/**
 * This type represents the full set schema derived fields of
 * the 'ts-model-with-mixin' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TsModelWithMixin} for fields + legacy mode features
 */
export interface TsModelWithMixinResource extends TsTrait {
  readonly [Type]: 'ts-model-with-mixin';
  id: string | null;
  title: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'ts-model-with-mixin' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TsModelWithMixinResource} for just the fields
 */
export interface TsModelWithMixin extends WithLegacy<TsModelWithMixinResource> {}
",
  "traits/": "__dir__",
  "traits/js-mixin.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const JsMixinTraitSchema = {
  'name': 'js-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ]
} satisfies LegacyTrait;

export default JsMixinTraitSchema;
",
  "traits/js-mixin.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'js-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface JsMixinTrait {
  createdAt?: Date | null;
}
",
  "traits/ts-mixin.ext.ts": "



import type { TsMixinTrait } from 'test-app/data/traits/ts-mixin.type';

export interface TsMixinTraitExtension extends TsMixinTrait {}

// TODO: migrate this extension to a class so that TypeScript declaration merging works.
// Object extensions do not support interface merging.
export const TsMixinTraitExtension = {
  toggleEnabled() {
    this.set('isEnabled', !this.isEnabled);
  }
};

const Registration = {
  kind: 'object',
  name: 'ts-mixin',
  features: TsMixinTraitExtension,
};
export default Registration;",
  "traits/ts-mixin.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const TsMixinTraitSchema = {
  'name': 'ts-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'isEnabled',
      'kind': 'attribute',
      'type': 'boolean'
    }
  ]
} satisfies LegacyTrait;

export default TsMixinTraitSchema;
",
  "traits/ts-mixin.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'ts-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface TsMixinTrait {
  isEnabled?: boolean | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > mixin with attributes only is ONLY referenced as a trait in a schema > contains_only_a_trait 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TestModelSchema = withDefaults({
  'type': 'test-model',
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ]
});

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.type';
import type { WorkstreamableTrait } from 'test-app/data/traits/workstreamable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for just the fields
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default WorkstreamableTraitSchema;
",
  "traits/workstreamable.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > mixin with both attributes and methods only is referenced as a trait and an objectExtension > contains_both_extension_and_a_trait 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TestModelSchema = withDefaults({
  'type': 'test-model',
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ],
  'objectExtensions': [
    'WorkstreamableTraitExtension'
  ]
});

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.type';
import type { WorkstreamableTrait } from 'test-app/data/traits/workstreamable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for just the fields
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const UserSchema = withDefaults({
  'type': 'user',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
});

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for just the fields
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.ext.ts": "



import type { WorkstreamableTrait } from 'test-app/data/traits/workstreamable.type';

export interface WorkstreamableTraitExtension extends WorkstreamableTrait {}

// TODO: migrate this extension to a class so that TypeScript declaration merging works.
// Object extensions do not support interface merging.
export const WorkstreamableTraitExtension = {
  imAnObjectExtensionNow() {}
};

const Registration = {
  kind: 'object',
  name: 'workstreamable',
  features: WorkstreamableTraitExtension,
};
export default Registration;",
  "traits/workstreamable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default WorkstreamableTraitSchema;
",
  "traits/workstreamable.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > model derived from intermediate model inherits traits and fields > derived_file_contents 1`] = `
{
  "resources/": "__dir__",
  "resources/ae-custom-multiselect8-option.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const AeCustomMultiselect8OptionSchema = withDefaults({
  'type': 'ae-custom-multiselect8-option',
  'fields': [],
  'traits': [
    'data-field-model'
  ]
});

export default AeCustomMultiselect8OptionSchema;
",
  "resources/ae-custom-multiselect8-option.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { DataFieldModelTrait } from 'test-app/data/traits/data-field-model.type';

/**
 * This type represents the full set schema derived fields of
 * the 'ae-custom-multiselect8-option' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AeCustomMultiselect8Option} for fields + legacy mode features
 */
export interface AeCustomMultiselect8OptionResource extends DataFieldModelTrait {
  readonly [Type]: 'ae-custom-multiselect8-option';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'ae-custom-multiselect8-option' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AeCustomMultiselect8OptionResource} for just the fields
 */
export interface AeCustomMultiselect8Option extends WithLegacy<AeCustomMultiselect8OptionResource> {}
",
  "traits/": "__dir__",
  "traits/base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': 'base-model',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "traits/base-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the 'base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
  id: string | null;
}
",
  "traits/data-field-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const DataFieldModelTraitSchema = {
  'name': 'data-field-model',
  'mode': 'legacy',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'sortOrder',
      'type': 'number'
    }
  ],
  'traits': [
    'base-model'
  ]
} satisfies LegacyTrait;

export default DataFieldModelTraitSchema;
",
  "traits/data-field-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';
import type { BaseModelTrait } from 'test-app/data/traits/base-model.type';

/**
 * This type represents the full set schema derived fields of
 * the 'data-field-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface DataFieldModelTrait extends BaseModelTrait {
  id: string | null;

  /**
   * The display name of the item.
   */
  name: string | undefined;

  /**
   * The sort order position for this data field.
   */
  sortOrder: number | undefined;
}
",
}
`;

exports[`migrate-to-schema batch operation > model with relative base-class import and mixins extracts fields and extensions > generated file structure 1`] = `
[
  "resources/",
  "resources/action-plan.ext.js",
  "resources/action-plan.schema.ts",
  "resources/action-plan.type.ts",
  "traits/",
  "traits/base-model.schema.ts",
  "traits/base-model.type.ts",
  "traits/commentable.schema.ts",
  "traits/commentable.type.ts",
]
`;

exports[`migrate-to-schema batch operation > model with relative base-class import and mixins extracts fields and extensions > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/action-plan.ext.js": "
import BaseModel from 'test-app/models/base-model';
import Commentable from '../../mixins/commentable';

export class ActionPlanExtension {
  get displayName() {
      return this.name;
    }
}

const Registration = {
  kind: 'object',
  name: 'action-plan',
  features: ActionPlanExtension,
};
export default Registration;",
  "resources/action-plan.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const ActionPlanSchema = withDefaults({
  'type': 'action-plan',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'status',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'owner',
      'type': 'user',
      'options': {
        'async': false,
        'inverse': null
      }
    }
  ],
  'traits': [
    'commentable'
  ]
});

export default ActionPlanSchema;
",
  "resources/action-plan.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { CommentableTrait } from 'test-app/data/traits/commentable.type';

/**
 * This type represents the full set schema derived fields of
 * the 'action-plan' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link ActionPlan} for fields + legacy mode features
 */
export interface ActionPlanResource extends CommentableTrait {
  readonly [Type]: 'action-plan';
  id: string | null;
  name: string | null;
  status: string | null;
  owner: User | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'action-plan' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link ActionPlanResource} for just the fields
 */
export interface ActionPlan extends WithLegacy<ActionPlanResource> {}
",
  "traits/": "__dir__",
  "traits/base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': 'base-model',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "traits/base-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the 'base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
  id: string | null;
}
",
  "traits/commentable.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const CommentableTraitSchema = {
  'name': 'commentable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'commentCount',
      'kind': 'attribute',
      'type': 'number'
    }
  ]
} satisfies LegacyTrait;

export default CommentableTraitSchema;
",
  "traits/commentable.type.ts": "
/**
 * This type represents the full set schema derived fields of
 * the 'commentable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface CommentableTrait {
  commentCount?: number | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > places intermediate model extensions in extensionsDir not fallback directory > intermediate model extensions app structure 1`] = `
[
  "core/",
  "core/base-model-with-methods.ts",
  "data/",
  "data/resources/",
  "data/resources/regular-model.schema.ts",
  "data/resources/regular-model.type.ts",
  "data/traits/",
  "data/traits/base-model-with-methods.ext.ts",
  "data/traits/base-model-with-methods.schema.ts",
  "data/traits/base-model-with-methods.type.ts",
  "models/",
  "models/regular-model.ts",
]
`;

exports[`migrate-to-schema batch operation > places intermediate model extensions in extensionsDir not fallback directory > intermediate model extensions files 1`] = `
{
  "resources/": "__dir__",
  "resources/regular-model.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const RegularModelSchema = withDefaults({
  'type': 'regular-model',
  'fields': [],
  'traits': [
    'base-model-with-methods'
  ]
});

export default RegularModelSchema;
",
  "resources/regular-model.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { BaseModelWithMethodsTrait } from 'test-app/data/traits/base-model-with-methods.type';

/**
 * This type represents the full set schema derived fields of
 * the 'regular-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link RegularModel} for fields + legacy mode features
 */
export interface RegularModelResource extends BaseModelWithMethodsTrait {
  readonly [Type]: 'regular-model';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'regular-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link RegularModelResource} for just the fields
 */
export interface RegularModel extends WithLegacy<RegularModelResource> {}
",
  "traits/": "__dir__",
  "traits/base-model-with-methods.ext.ts": "
import Model, { attr } from '@ember-data/model';

export default class BaseModelWithMethods extends Model {
  @attr('string') baseField;

  // This should create an extension artifact
  get computedValue() {
    return this.baseField + ' computed';
  }

  someMethod() {
    return 'from base model';
  }
}

import type { BaseModelWithMethodsTrait } from 'test-app/data/traits/base-model-with-methods.type';

export interface BaseModelWithMethodsTraitExtension extends BaseModelWithMethodsTrait {}

export class BaseModelWithMethodsTraitExtension {
  // This should create an extension artifact
  get computedValue() {
      return this.baseField + ' computed';
    }

  someMethod() {
      return 'from base model';
    }
}

const Registration = {
  kind: 'object',
  name: 'base-model-with-methods',
  features: BaseModelWithMethodsTraitExtension,
};
export default Registration;",
  "traits/base-model-with-methods.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelWithMethodsTraitSchema = {
  'name': 'base-model-with-methods',
  'mode': 'legacy',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'baseField',
      'type': 'string'
    }
  ]
} satisfies LegacyTrait;

export default BaseModelWithMethodsTraitSchema;
",
  "traits/base-model-with-methods.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the 'base-model-with-methods' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelWithMethodsTrait {
  id: string | null;
  baseField: string | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models file structure 1`] = `
[
  "resources/",
  "resources/custom-select-option.schema.ts",
  "resources/custom-select-option.type.ts",
  "traits/",
  "traits/base-model.schema.ts",
  "traits/base-model.type.ts",
  "traits/data-field-model.schema.ts",
  "traits/data-field-model.type.ts",
]
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models resources 1`] = `
{
  "custom-select-option.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const CustomSelectOptionSchema = withDefaults({
  'type': 'custom-select-option',
  'fields': [],
  'traits': [
    'data-field-model'
  ]
});

export default CustomSelectOptionSchema;
",
  "custom-select-option.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { DataFieldModelTrait } from 'test-app/data/traits/data-field-model.type';

/**
 * This type represents the full set schema derived fields of
 * the 'custom-select-option' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link CustomSelectOption} for fields + legacy mode features
 */
export interface CustomSelectOptionResource extends DataFieldModelTrait {
  readonly [Type]: 'custom-select-option';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'custom-select-option' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CustomSelectOptionResource} for just the fields
 */
export interface CustomSelectOption extends WithLegacy<CustomSelectOptionResource> {}
",
}
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models traits 1`] = `
{
  "base-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const BaseModelTraitSchema = {
  'name': 'base-model',
  'mode': 'legacy',
  'fields': []
} satisfies LegacyTrait;

export default BaseModelTraitSchema;
",
  "base-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

/**
 * This type represents the full set schema derived fields of
 * the 'base-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface BaseModelTrait {
  id: string | null;
}
",
  "data-field-model.schema.ts": "
import type { LegacyTrait } from '@warp-drive/core/types/schema/fields';

const DataFieldModelTraitSchema = {
  'name': 'data-field-model',
  'mode': 'legacy',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'sortOrder',
      'type': 'number'
    }
  ],
  'traits': [
    'base-model'
  ]
} satisfies LegacyTrait;

export default DataFieldModelTraitSchema;
",
  "data-field-model.type.ts": "
import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';
import type { BaseModelTrait } from 'test-app/data/traits/base-model.type';

/**
 * This type represents the full set schema derived fields of
 * the 'data-field-model' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 */
export interface DataFieldModelTrait extends BaseModelTrait {
  id: string | null;
  name: string | null;
  sortOrder: number | null;
}
",
}
`;

exports[`migrate-to-schema batch operation > respects dryRun option and does not create files > dryRun file structure 1`] = `[]`;

exports[`migrate-to-schema batch operation > respects models-only and mixins-only options > models-only file structure 1`] = `
[
  "resources/",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > skips mixin processing when no model-connected mixins are found > traits directory structure 1`] = `[]`;

exports[`migrate-to-schema batch operation > typed model with multiline declarations 1`] = `
{
  "resources/": "__dir__",
  "resources/typed.schema.ts": "
import { withDefaults } from '@warp-drive/legacy/model/migration-support';

const TypedSchema = withDefaults({
  'type': 'typed',
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'owner',
      'type': 'user',
      'options': {
        'async': false,
        'inverse': null
      }
    },
    {
      'kind': 'hasMany',
      'name': 'tags',
      'type': 'tag',
      'options': {
        'async': true,
        'inverse': null
      }
    }
  ]
});

export default TypedSchema;
",
  "resources/typed.type.ts": "
import type { Type } from '@warp-drive/core/types/symbols';
import type { WithLegacy } from '@warp-drive/legacy/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { Tag } from 'test-app/data/resources/tag.type';

/**
 * This type represents the full set schema derived fields of
 * the 'typed' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Typed} for fields + legacy mode features
 */
export interface TypedResource {
  readonly [Type]: 'typed';
  id: string | null;
  name: string | null;
  owner: unknown;
  tags: unknown;
}

/**
 * This type represents the full set schema derived fields of
 * the 'typed' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TypedResource} for just the fields
 */
export interface Typed extends WithLegacy<TypedResource> {}
",
  "traits/": "__dir__",
}
`;
